pane-dash/tests/snapshots/render__alerts_remain_visible_with_all_statuses_at_80_columns.snap
---
source: tests/render.rs
expression: rendered
---
▾ dash (6)                                                             1 working
  ● needs_input  2m    1.2  tmp          sonnet  Input
  ◐ working      2m    1.2  tmp          sonnet  Work
  ○ idle         2m    1.2  tmp          sonnet  Idle
  ✗ error        2m    1.2  tmp          sonnet  Error
  ? unknown      2m    1.2  tmp          sonnet  Unknown
  ⊘ stale        2m    1.2  tmp          sonnet  Stale


────────────────────────────────────────────────────────────────────────────────
select a pane to preview









snapshot failed (2): tmux unavailable
⚠ polling failures: 2
dropped: 3
N1W1I1E1U1S1P6  grouped | NAV
