pane-dash/tests/snapshots/render__creation_choice.snap
---
source: tests/render.rs
expression: choice
---
▾ dash (1)                                                             1 working
  ◐ working      2m    1.2  tmp          sonnet  Task







     ┌Create──────────────────────────────────────────────────────────────┐
─────│split right                                                         │─────
selec│new session                                                         │
     │↑↓ select | Enter choose | Esc cancel                               │
     │                                                                    │
     └────────────────────────────────────────────────────────────────────┘








working 1  1 panes  grouped | NAV
