pane-dash/tests/snapshots/render__creation_form_validation_intermediate.snap
---
source: tests/render.rs
expression: intermediate
---
┌Create split──────┐
│command: d command│
│ERROR: invalid com│
│linked window: spl│
│Tab/↑↓ field | Ent│
└──────────────────┘
