pane-dash/tests/snapshots/render__creation_form_validation_tiny.snap
---
source: tests/render.rs
expression: tiny
---
┌Create split──────┐
│command: d command│
│ERROR: invalid com│
└──────────────────┘
