pane-dash/tests/snapshots/render__creation_pending_filter_retained.snap
---
source: tests/render.rs
expression: retained_filter
---
⠋ creating...

                              no panes match filter
────────────────────────────────────────────────────────────────────────────────
select a pane to preview


working 1  1 panes  grouped | FILTER: absent
